Minor css fix for overflowing border on child

--- a/src/components/custom-blocks/typing-code-block.module.css
+++ b/src/components/custom-blocks/typing-code-block.module.css
@@ -35,8 +35,8 @@
 }
 
 .replayButton {
-  width: 150px;
-  height: 50px;
+  width: 152px;
+  height: 52px;
   top: 50px;
   left: auto;
   right: 16px;
